[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[net]
git-fetch-with-cli = true

[dependencies]
futures = "0.3.29"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
